Containerizzato l'intero progetto