@@ -1,79 +1,61 @@
 package it.uniba.hrassistant.config;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpHeaders;
-import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher; // <--- Importante!
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
-/**
- * Classe di configurazione principale per Spring Security (versione 6+).
- * Definisce la politica CORS, la gestione delle sessioni (Stateless) e i filtri.
- */
 @Configuration
-@EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final JwtAuthenticationFilter jwtAuthFilter;
-    private final AuthenticationProvider authenticationProvider; // Iniettato da ApplicationConfig
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // Disabilita CSRF perché usiamo JWT (Stateless)
                 .csrf(AbstractHttpConfigurer::disable)
-                // Configurazione CORS (Cross-Origin Resource Sharing)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // REQUISITO CRITICO: PREVENZIONE CACHE
-                // Impedisce al browser di salvare dati sensibili nella cache locale.
-                // Fondamentale per evitare che il tasto "Indietro" mostri dati dopo il logout.
-                .headers(headers -> headers
-                        .cacheControl(cache -> cache.disable())
-                        .addHeaderWriter((request, response) -> {
-                            response.setHeader(HttpHeaders.CACHE_CONTROL, "no-cache, no-store, max-age=0, must-revalidate");
-                            response.setHeader(HttpHeaders.PRAGMA, "no-cache");
-                            response.setHeader(HttpHeaders.EXPIRES, "0");
-                        })
-                )
-                // Autorizzazione Endpoint
+                .cors(Customizer.withDefaults())
+                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers("/error").permitAll()
+                        // 1. Preflight CORS (OPTIONS)
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // 2. Login e Registrazione (Usiamo AntPathRequestMatcher per sicurezza)
+                        .requestMatchers(new AntPathRequestMatcher("/auth/**")).permitAll()
+
+                        // 3. Gestione Errori
+                        .requestMatchers(new AntPathRequestMatcher("/error")).permitAll()
+
+                        // 4. Tutto il resto richiede token
                         .anyRequest().authenticated()
                 )
-                // Gestione Sessione: STATELESS (Nessuna sessione server-side)
-                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // Inserimento Provider e Filtro Custom
-                .authenticationProvider(authenticationProvider)
-                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    /**
-     * Configura le regole CORS per permettere chiamate solo dal Frontend fidato.
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("https://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // OPTIONS è vitale
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
